# DevilsDatabase

./: .gitignore  Makefile  README.md  alps.sql  install.sh  pyproject.toml  t_hasheqj_2.ans  t_hasheqj_3.sql  t_hasheqj_4.sql  t_hasheqj_5.sql
docs/source/: conf.py  index.rst
src/ddb/: db.py  globals.py  metadata.py  parser.py  primitives.py  profile.py  session.py  util.py
src/ddb/executor/: __init__.py  aggr.py  command.py  filter.py  indexscan.py  interface.py  literaltable.py  materialize.py  mergesort.py  project.py  tablescan.py  util.py
src/ddb/planner/: __init__.py  baseline.py  interface.py  naive.py  smart.py  util.py
src/ddb/stats/: __init__.py  interface.py  naive.py
src/ddb/storage/: __init__.py  interface.py  lmdb.py  serialize.py
src/ddb/transaction/: __init__.py  baseline.py  interface.py
src/ddb/validator/: __init__.py  interface.py  lops.py  (+1 more)
tests/aggr/: aggr_util.py  t_aggr_0.ans  t_aggr_0.sql  t_aggr_1.ans  t_aggr_1.sql  t_aggr_10.ans  t_aggr_10.sql  t_aggr_11.ans  t_aggr_11.sql  t_aggr_2.ans  t_aggr_2.sql  t_aggr_3.ans  t_aggr_3.sql  t_aggr_4.ans  t_aggr_4.sql  t_aggr_5.ans  t_aggr_5.sql  t_aggr_6.ans  t_aggr_6.sql  t_aggr_7.ans  t_aggr_7.sql  t_aggr_8.ans  t_aggr_8.sql  t_aggr_9.ans  t_aggr_9.sql  test_aggr.py
tests/hasheqj/: hasheqj_util.py  t_hasheqj_0.ans  t_hasheqj_0.sql  t_hasheqj_1.ans  t_hasheqj_1.sql  t_hasheqj_2.sql  t_hasheqj_3.ans  t_hasheqj_4.sql  test_hasheqj.py
tests/qo/: create_table_100.sql  create_table_1000.sql  create_table_10000.sql  create_table_100000.sql  q1.sql  q2.sql  q3.sql  q4.sql  test_qo.py  util.py
(+16 files in other folders)
