[tool.ddb]
url = "https://github.com/junyang/ddb"
docbaseurl = "http://www.cs.duke.edu/~junyang/ddb"
codebaseurl = "https://github.com/junyang/ddb/master"
rawcodebaseurl = "https://raw.githubusercontent.com/junyang/ddb/master"

[tool.poetry]
name = "ddb"
version = "1.2025.0"
authors = ["Jun Yang <junyang@gmail.com>"]
description = "Duke Devil's Database"

[tool.poetry.dependencies]
python = "^3.11"
lmdb = "^1.4.1"
mypy = "^1.7.1"
sphinx = "^7.2.6"
toml = "^0.10.2"
pytest = "^7.4.3"
sqlglot = {extras = ["rs"], version = "^20.5.0"}
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19.14"
datasketches = "^4.1.0"
sortedcontainers = "^2.4.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
